# research

./: yes  yes.pub
dealsdb/: categories_to_sqlite.ipynb  categrory_important_words.ipynb  indexing_and_search.ipynb  parse_deal_data.ipynb  split_deals_to_files.ipynb
dealsdb/.ipynb_checkpoints/: parse_deal_data-checkpoint.ipynb  split_deals_to_files-checkpoint.ipynb
locality/: locality.ipynb
locality/data/: us.zip.csv  us.zip.state.csv  zip.source.us.csv
query_preprocesing_node/: index.js  npm.install
relevance/: search_annotation_data.ipynb  top_ngrams_for_word.ipynb
suggest/: TF-IDF-global-deals.ipynb  count_tokenizer.ipynb  ga.search.query.clean.csv  locality_detection.ipynb  output_file.npy  parse.queries.from.ga.ipynb  parse_gpt_result.ipynb  q.data.csv  q.raw.ipynb  queries.txt  query.clean.csv  query_to_categories.txt  search_category_use_embedings-top100.ipynb  search_category_use_embedings.ipynb  sentence_tranformer.ipynb  suggest-tfidf.ipynb  typo.ipynb  typo_test.ipynb  w2v.ipynb  w2v2.ipynb
suggest/.ipynb_checkpoints/: parse.queries.from.ga-checkpoint.ipynb
suggest/models/: .mean_tfidf_unigram_normalize1.csv.swp  category_embeding.csv  category_sort.csv  dict.csv  dict_uniq.csv  mean_tfidf_bigram.csv  mean_tfidf_bigram_normalize.csv  mean_tfidf_fourgram.csv  mean_tfidf_trigram.csv  mean_tfidf_unigram.csv  (+1 more)
suggestserver/: Cargo.toml  config.toml
suggestserver/data/: dict_uniq.csv  mean_tfidf_unigram_normalize1.csv
suggestserver/src/: main.rs
suggestserver/templates/: index.html
titleserver/: Cargo.toml
titleserver/src/: main.rs
(+3 files in other folders)
