[package]
name = "suggestserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
csv = "1.1"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
askama = "0.12"
elasticsearch = "8.17.0-alpha.1"
rustls = "0.23.23"
rusqlite = "0.26"
config = "0.13"
url = "2"
log = "0.4" # Add this line
env_logger = "0.9" # Add this line