[package]
name = "titleserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
rusqlite = { version = "0.26", features = ["bundled"] }
log = "0.4" # Add this line
env_logger = "0.9" # Add this line
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
